@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- MSSQL2008: Add support for geography data type by extending the DATA syntax 
+  to 'geometry_column(geometry_type) from table_name'
+
 - Fixed ability to get the error message and code of an OWS exception (#3554)
 
 - Fixed msOGRGetSymbolId according to the changes in gdal 1.8 (#3556)
